<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignalCollect" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cellphoneModel" />

        <TextView
            android:id="@+id/txViewModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge" />
		
    	<TextView
    	    android:id="@+id/textView2"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:text="@string/runningTime" />

    	<TextView
    	    android:id="@+id/tvTick"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:text="0"
    	    android:textAppearance="?android:attr/textAppearanceLarge" />
    
		<TextView
		    android:id="@+id/textView3"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/gpsInfo" />
		
		<TextView
		    android:id="@+id/txViewGPS"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/noGPS"
		    android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debugInfo" />

        <TextView
            android:id="@+id/txViewDebug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initialService"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <TextView
        	android:id="@+id/textView5"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="WiFi" />

    	<TextView
        	android:id="@+id/wifiInfo"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="Large Text"
        	android:textAppearance="?android:attr/textAppearanceLarge" />
    
    </LinearLayout>



</RelativeLayout>